--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "axios": "^1.4.0",
+    "bootstrap": "^4.6.2",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^4.9.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
